fix: bigger star cost badge, fix energy orb left clipping

--- a/src/components/react/CssCardRenderer.css
+++ b/src/components/react/CssCardRenderer.css
@@ -79,7 +79,7 @@
 .cr-energy {
   position: absolute;
   top: 0.9%;
-  left: 1.2%;
+  left: 2.5%;
   width: 18.8%;
   height: 14.5%;
   display: flex;
@@ -107,9 +107,9 @@
 .cr-star {
   position: absolute;
   top: 13.5%;
-  left: 1.2%;
-  width: 14%;
-  height: 11%;
+  left: 3.5%;
+  width: 16%;
+  height: 13%;
   display: flex;
   align-items: center;
   justify-content: center;
